--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-
+<!-- 
 <app-contador></app-contador>
 <app-heroe></app-heroe>
 
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+<app-dbz-main-page></app-dbz-main-page>
